Project Image Spacing Fix

--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     // height: 90vh;
     text-align: center;
-    margin: 5rem auto 2rem auto;
+    margin: 5rem auto 5rem auto;
 
     .project-image {
         width: 300px;
